--- a/config/locales/views_ja.yml
+++ b/config/locales/views_ja.yml
@@ -8,3 +8,13 @@ ja:
       email: メールアドレス
       password: パスワード
       submit: ログイン
+  products:
+    index:
+      title: プロダクト一覧
+      name: 名前
+      link: リンク
+      show: 詳細
+      edit: 編集
+      destroy: 削除
+      are_you_sure: 本当に削除してもよいですか？
+      new_product: 新規作成
