--- a/config/locales/views_ja.yml
+++ b/config/locales/views_ja.yml
@@ -18,3 +18,11 @@ ja:
       destroy: 削除
       are_you_sure: 本当に削除してもよいですか？
       new_product: 新規作成
+  users:
+    index:
+      email: メールアドレス
+      show: 詳細
+      edit: 編集
+      destroy: 削除
+      are_you_sure: 本当に削除してもよいですか？
+      new_user: 新規作成
