--- a/config/locales/views_ja.yml
+++ b/config/locales/views_ja.yml
@@ -26,3 +26,10 @@ ja:
       destroy: 削除
       are_you_sure: 本当に削除してもよいですか？
       new_user: 新規作成
+  impressions:
+    index:
+      show: 詳細
+      edit: 編集
+      destroy: 削除
+      are_you_sure: 本当に削除してもよいですか？
+      new_impression: 新規作成
