name, code を表示・編集できるようにした

--- a/config/locales/views_ja.yml
+++ b/config/locales/views_ja.yml
@@ -36,6 +36,8 @@ ja:
       new_user: 新規作成
     show:
       title: アカウント情報
+      name: ニックネーム
+      code: アカウントID
       email: メールアドレス
       password: パスワード
       filtered_password: （表示できません）
