--- a/config/locales/activerecord_ja.yml
+++ b/config/locales/activerecord_ja.yml
@@ -2,6 +2,8 @@ ja:
   activerecord:
     attributes:
       user:
+        name: ニックネーム
+        code: アカウントID
         email: メールアドレス
         password: パスワード
         password_confirmation: パスワード（再確認）
